--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3300/project3?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root
+#hibernate.connection.zeroDateTimeBehavior=convertToNull
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=false
