--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ server.port=8080
 ### Hibernate Properties
 ## Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3300/project3?zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5433/project3?zeroDateTimeBehavior=convertToNull
+spring.datasource.username=postgres
 spring.datasource.password=root
 #hibernate.connection.zeroDateTimeBehavior=convertToNull
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
