--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Chạy ứng dụng trên port 8080
 server.port=8080
-
+#server.servlet.context-path=/phone-shop
 #spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 ### Hibernate Properties
 ## Hibernate ddl auto (create, create-drop, validate, update)
